--- a/.github/workflows/ios_manual_deploy.yml
+++ b/.github/workflows/ios_manual_deploy.yml
@@ -14,39 +14,31 @@ jobs:
     timeout-minutes: 60
 
     env:
-      # --- Required secrets (set these in GitHub repo secrets) ---
       APPLE_ID: ${{ secrets.APPLE_ID }}
       APP_IDENTIFIER: ${{ secrets.APP_IDENTIFIER }}
       APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
 
-      # App Store Connect API key (p8) as BASE64 (single-line)
       APP_STORE_CONNECT_API_KEY_ID: ${{ secrets.APP_STORE_CONNECT_API_KEY_ID }}
       APP_STORE_CONNECT_API_KEY_ISSUER_ID: ${{ secrets.APP_STORE_CONNECT_API_KEY_ISSUER_ID }}
       APP_STORE_CONNECT_API_KEY_BASE64: ${{ secrets.APP_STORE_CONNECT_API_KEY_BASE64 }}
 
-      # Distribution cert (p12) as BASE64 and password
       IOS_DIST_CERT_BASE64: ${{ secrets.IOS_DIST_CERT_BASE64 }}
       IOS_DIST_CERT_PASSWORD: ${{ secrets.IOS_DIST_CERT_PASSWORD }}
 
-      # Provisioning profile (.mobileprovision) as BASE64 (App Store profile)
       IOS_APPSTORE_PROFILE_BASE64: ${{ secrets.IOS_APPSTORE_PROFILE_BASE64 }}
 
-      # Keychain password (can be empty but better set)
       KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
 
-      # --- Build config ---
       XCODE_WORKSPACE: ios/JunoNative.xcworkspace
       XCODE_SCHEME: JunoNative
       CONFIGURATION: Release
 
-      # Node
       NODE_VERSION: "22"
 
     steps:
       - name: 🧾 Checkout code
         uses: actions/checkout@v4
 
-      # Avoid ${{ runner.temp }} entirely; compute paths from $RUNNER_TEMP
       - name: Compute build paths
         shell: bash
         run: |
@@ -65,59 +57,36 @@ jobs:
           set -euo pipefail
           if [ -f "yarn.lock" ]; then
             echo "manager=yarn" >> "$GITHUB_OUTPUT"
-            echo "lock=yarn.lock" >> "$GITHUB_OUTPUT"
           elif [ -f "package-lock.json" ]; then
             echo "manager=npm" >> "$GITHUB_OUTPUT"
-            echo "lock=package-lock.json" >> "$GITHUB_OUTPUT"
           elif [ -f "pnpm-lock.yaml" ]; then
             echo "manager=pnpm" >> "$GITHUB_OUTPUT"
-            echo "lock=pnpm-lock.yaml" >> "$GITHUB_OUTPUT"
           else
-            # Last-resort: don’t hard-fail the workflow here; we’ll do a non-frozen install.
             echo "manager=yarn" >> "$GITHUB_OUTPUT"
-            echo "lock=" >> "$GITHUB_OUTPUT"
           fi
-
-          echo "Detected package manager: $(cat "$GITHUB_OUTPUT" | grep manager | cut -d= -f2)"
 
       - name: 🟩 Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
-          # Option B: NO cache here, because setup-node hard-fails when the lock file isn't present.
 
       - name: 📦 Install JS deps (lockfile-aware)
         shell: bash
         run: |
           set -euo pipefail
-
           corepack enable || true
 
           case "${{ steps.pm.outputs.manager }}" in
             yarn)
-              echo "Using Yarn..."
               yarn --version
-              if [ -f "yarn.lock" ]; then
-                yarn install --frozen-lockfile
-              else
-                echo "⚠️ No yarn.lock found; running non-frozen install (commit yarn.lock for deterministic builds)."
-                yarn install
-              fi
+              if [ -f "yarn.lock" ]; then yarn install --frozen-lockfile; else yarn install; fi
               ;;
             npm)
-              echo "Using npm..."
-              node --version
-              npm --version
               npm ci
               ;;
             pnpm)
-              echo "Using pnpm..."
               pnpm --version || corepack prepare pnpm@latest --activate
               pnpm install --frozen-lockfile
-              ;;
-            *)
-              echo "Unknown package manager selection."
-              exit 1
               ;;
           esac
 
@@ -139,7 +108,7 @@ jobs:
           ruby-version: "3.2"
           bundler-cache: true
 
-      - name: 💎 Setup Ruby (no Gemfile) + install required gems
+      - name: 💎 Setup Ruby (no Gemfile)
         if: ${{ steps.ruby.outputs.use_bundler != 'true' }}
         uses: ruby/setup-ruby@v1
         with:
@@ -165,6 +134,7 @@ jobs:
             pod install --repo-update
           fi
 
+      # ✅ FIXED: create/unlock keychain only (NO partition list yet)
       - name: 🔐 Create temporary keychain
         shell: bash
         run: |
@@ -176,15 +146,15 @@ jobs:
           security set-keychain-settings -lut 21600 "$KEYCHAIN_PATH"
           security unlock-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
 
-          security list-keychains -d user -s "$KEYCHAIN_PATH"
+          # Keep login keychain available too (avoids weird tool lookups)
+          security list-keychains -d user -s "$KEYCHAIN_PATH" "$HOME/Library/Keychains/login.keychain-db"
           security default-keychain -s "$KEYCHAIN_PATH"
-
-          security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
 
           echo "KEYCHAIN_PATH=$KEYCHAIN_PATH" >> "$GITHUB_ENV"
           echo "KEYCHAIN_PASSWORD=$KEYCHAIN_PASSWORD" >> "$GITHUB_ENV"
 
-      - name: 🪪 Decode and import signing certificate (p12)
+      # ✅ FIXED: import first, THEN set partition list
+      - name: 🪪 Decode and import signing certificate (p12) + enable codesign access
         shell: bash
         run: |
           set -euo pipefail
@@ -195,12 +165,25 @@ jobs:
             -k "$KEYCHAIN_PATH" \
             -P "$IOS_DIST_CERT_PASSWORD" \
             -T /usr/bin/codesign \
-            -T /usr/bin/security
+            -T /usr/bin/security \
+            -T /usr/bin/xcodebuild \
+            -T /usr/bin/productbuild
+
+          # Now the private key exists -> partition list works
+          security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
+
+          # Sanity check: ensure the signing identity is visible
+          security find-identity -v -p codesigning "$KEYCHAIN_PATH"
 
       - name: 📄 Decode provisioning profile
         shell: bash
         run: |
           set -euo pipefail
+          if [ -z "${IOS_APPSTORE_PROFILE_BASE64:-}" ]; then
+            echo "IOS_APPSTORE_PROFILE_BASE64 is empty. Set it in GitHub Secrets."
+            exit 1
+          fi
+
           PP_DIR="$HOME/Library/MobileDevice/Provisioning Profiles"
           mkdir -p "$PP_DIR"
 
@@ -228,7 +211,6 @@ jobs:
           set -euo pipefail
           rm -rf "$ARCHIVE_PATH"
 
-          # NOTE: if your project needs specific signing settings, keep them in Xcode.
           xcodebuild \
             -workspace "$XCODE_WORKSPACE" \
             -scheme "$XCODE_SCHEME" \
@@ -246,7 +228,6 @@ jobs:
         shell: bash
         run: |
           set -euo pipefail
-
           cat > "$EXPORT_OPTIONS_PLIST" << PLIST
           <?xml version="1.0" encoding="UTF-8"?>
           <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
@@ -272,7 +253,6 @@ jobs:
           </dict>
           </plist>
           PLIST
-
           plutil -lint "$EXPORT_OPTIONS_PLIST"
 
       - name: 📤 Export IPA (xcodebuild -exportArchive)
@@ -289,11 +269,7 @@ jobs:
             -exportOptionsPlist "$EXPORT_OPTIONS_PLIST" | xcpretty
 
           ls -la "$EXPORT_DIR"
-          IPA_COUNT=$(find "$EXPORT_DIR" -maxdepth 1 -name "*.ipa" | wc -l | tr -d ' ')
-          if [ "$IPA_COUNT" -lt 1 ]; then
-            echo "No .ipa found in export dir"
-            exit 1
-          fi
+          test -n "$(find "$EXPORT_DIR" -maxdepth 1 -name "*.ipa" -print -quit)"
 
       - name: 🚀 Upload to TestFlight (fastlane pilot)
         shell: bash
@@ -301,10 +277,8 @@ jobs:
           RELEASE_NOTES: ${{ inputs.release_notes }}
         run: |
           set -euo pipefail
-
           IPA_PATH=$(find "$EXPORT_DIR" -maxdepth 1 -name "*.ipa" | head -n 1)
 
-          # Create fastlane api_key.json
           cat > "$ASC_API_KEY_JSON" << JSON
           {
             "key_id": "${APP_STORE_CONNECT_API_KEY_ID}",
