--- a/.github/workflows/ios_manual_deploy.yml
+++ b/.github/workflows/ios_manual_deploy.yml
@@ -14,39 +14,29 @@ jobs:
     timeout-minutes: 60
 
     env:
-      # --- Required secrets (GitHub repo secrets) ---
       APPLE_ID: ${{ secrets.APPLE_ID }}
       APP_IDENTIFIER: ${{ secrets.APP_IDENTIFIER }}
       APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
 
-      # App Store Connect API key (.p8) as BASE64 (single-line)
       APP_STORE_CONNECT_API_KEY_ID: ${{ secrets.APP_STORE_CONNECT_API_KEY_ID }}
       APP_STORE_CONNECT_API_KEY_ISSUER_ID: ${{ secrets.APP_STORE_CONNECT_API_KEY_ISSUER_ID }}
       APP_STORE_CONNECT_API_KEY_BASE64: ${{ secrets.APP_STORE_CONNECT_API_KEY_BASE64 }}
 
-      # Distribution cert (.p12) as BASE64 (single-line) and password
       IOS_DIST_CERT_BASE64: ${{ secrets.IOS_DIST_CERT_BASE64 }}
       IOS_DIST_CERT_PASSWORD: ${{ secrets.IOS_DIST_CERT_PASSWORD }}
 
-      # Provisioning profile (.mobileprovision) as BASE64 (single-line)
       IOS_PROFILE_BASE64: ${{ secrets.IOS_PROFILE_BASE64 }}
-
-      # Keychain password (can be empty but better set)
       KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
 
-      # --- Build config ---
       XCODE_WORKSPACE: ios/JunoNative.xcworkspace
       XCODE_SCHEME: JunoNative
       CONFIGURATION: Release
-
-      # Node
       NODE_VERSION: "22"
 
     steps:
       - name: 🧾 Checkout code
         uses: actions/checkout@v4
 
-      # Avoid ${{ runner.temp }} (it is NOT valid everywhere); use $RUNNER_TEMP instead.
       - name: Compute build paths
         shell: bash
         run: |
@@ -73,225 +63,134 @@ jobs:
           else
             echo "manager=yarn" >> "$GITHUB_OUTPUT"
           fi
-          echo "Detected JS package manager: ${{ steps.pm.outputs.manager }}"
 
       - name: 🟩 Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
-          # IMPORTANT: don't enable cache unless a lockfile is guaranteed present.
-          # setup-node hard-fails if it can't find yarn.lock / package-lock.json / pnpm-lock.yaml.
 
       - name: 📦 Install JS deps (lockfile-aware)
         shell: bash
         run: |
           set -euo pipefail
           corepack enable || true
-
           case "${{ steps.pm.outputs.manager }}" in
             yarn)
-              echo "Using Yarn..."
-              yarn --version
-              if [ -f "yarn.lock" ]; then
-                yarn install --frozen-lockfile
-              else
-                echo "⚠️ No yarn.lock found; running non-frozen install (commit yarn.lock for deterministic builds)."
-                yarn install
-              fi
+              if [ -f "yarn.lock" ]; then yarn install --frozen-lockfile; else yarn install; fi
               ;;
             npm)
-              echo "Using npm..."
-              node --version
-              npm --version
-              if [ -f "package-lock.json" ]; then
-                npm ci
-              else
-                npm install
-              fi
+              if [ -f "package-lock.json" ]; then npm ci; else npm install; fi
               ;;
             pnpm)
-              echo "Using pnpm..."
               pnpm --version || corepack prepare pnpm@latest --activate
-              if [ -f "pnpm-lock.yaml" ]; then
-                pnpm install --frozen-lockfile
-              else
-                pnpm install
-              fi
-              ;;
-            *)
-              echo "Unknown package manager selection."
-              exit 1
+              if [ -f "pnpm-lock.yaml" ]; then pnpm install --frozen-lockfile; else pnpm install; fi
               ;;
           esac
 
-      - name: 💎 Detect Ruby strategy (Bundler vs gem install)
-        id: ruby
-        shell: bash
-        run: |
-          set -euo pipefail
-          if [ -f "Gemfile" ]; then
-            echo "use_bundler=true" >> "$GITHUB_OUTPUT"
-          else
-            echo "use_bundler=false" >> "$GITHUB_OUTPUT"
-          fi
-
-      - name: 💎 Setup Ruby (Bundler cache)
-        if: ${{ steps.ruby.outputs.use_bundler == 'true' }}
+      - name: 💎 Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: "3.2"
-          bundler-cache: true
+          bundler-cache: false
 
-      - name: 💎 Setup Ruby (no Gemfile)
-        if: ${{ steps.ruby.outputs.use_bundler != 'true' }}
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: "3.2"
-
-      - name: 💎 Install fastlane/cocoapods/xcpretty (no Gemfile)
-        if: ${{ steps.ruby.outputs.use_bundler != 'true' }}
+      - name: 💎 Install fastlane/cocoapods/xcpretty
         shell: bash
         run: |
           set -euo pipefail
-          gem install fastlane -N
-          gem install cocoapods -N
-          gem install xcpretty -N
+          gem install fastlane cocoapods xcpretty -N
+          echo "$(ruby -e 'print Gem.bindir')" >> "$GITHUB_PATH"
+          xcpretty --version || echo "⚠️ xcpretty not found after install!"
 
       - name: 🧰 Install CocoaPods
         shell: bash
         run: |
           set -euo pipefail
           cd ios
-          if [ "${{ steps.ruby.outputs.use_bundler }}" = "true" ]; then
-            bundle exec pod install --repo-update
-          else
-            pod install --repo-update
-          fi
+          pod install --repo-update
 
-      # Create/unlock keychain (no partition list yet — that fails before the private key exists)
       - name: 🔐 Create temporary keychain
         shell: bash
         run: |
           set -euo pipefail
           KEYCHAIN_PATH="$RUNNER_TEMP/ios-build.keychain-db"
           KEYCHAIN_PASSWORD="${KEYCHAIN_PASSWORD:-temp-pass}"
-
           security create-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
           security set-keychain-settings -lut 21600 "$KEYCHAIN_PATH"
           security unlock-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
-
-          # Keep login keychain available too (avoids weird lookups)
           security list-keychains -d user -s "$KEYCHAIN_PATH" "$HOME/Library/Keychains/login.keychain-db"
           security default-keychain -s "$KEYCHAIN_PATH"
-
           echo "KEYCHAIN_PATH=$KEYCHAIN_PATH" >> "$GITHUB_ENV"
           echo "KEYCHAIN_PASSWORD=$KEYCHAIN_PASSWORD" >> "$GITHUB_ENV"
 
-      # Import cert first, THEN partition list (otherwise: SecItemCopyMatching not found)
-      - name: 🪪 Import signing certificate (p12) + enable codesign access
+      - name: 🪪 Import signing certificate (p12)
         shell: bash
         run: |
           set -euo pipefail
-
-          if [ -z "${IOS_DIST_CERT_BASE64:-}" ]; then
-            echo "IOS_DIST_CERT_BASE64 is empty. Set it in GitHub Secrets."
-            exit 1
-          fi
-          if [ -z "${IOS_DIST_CERT_PASSWORD:-}" ]; then
-            echo "IOS_DIST_CERT_PASSWORD is empty. Set it in GitHub Secrets."
-            exit 1
-          fi
-
           CERT_P12="$RUNNER_TEMP/ios_dist.p12"
           python3 -c "import base64,os; open('${CERT_P12}','wb').write(base64.b64decode(os.environ['IOS_DIST_CERT_BASE64'].strip()))"
-          python3 -c "import os; print('p12 bytes:', os.path.getsize('${CERT_P12}'))"
-
-          security import "$CERT_P12" \
-            -k "$KEYCHAIN_PATH" \
-            -P "$IOS_DIST_CERT_PASSWORD" \
-            -T /usr/bin/codesign \
-            -T /usr/bin/security \
-            -T /usr/bin/xcodebuild \
-            -T /usr/bin/productbuild
-
+          security import "$CERT_P12" -k "$KEYCHAIN_PATH" -P "$IOS_DIST_CERT_PASSWORD" \
+            -T /usr/bin/codesign -T /usr/bin/xcodebuild
           security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
-
-          echo "Available signing identities:"
           security find-identity -v -p codesigning "$KEYCHAIN_PATH"
-
-          # Fail if none are found (prevents mysterious signing failures later)
-          if ! security find-identity -v -p codesigning "$KEYCHAIN_PATH" | grep -qE "\) "; then
-            echo "No codesigning identity found in keychain after import."
-            exit 1
-          fi
 
       - name: 📄 Decode provisioning profile (IOS_PROFILE_BASE64)
         shell: bash
         run: |
           set -euo pipefail
-
-          if [ -z "${IOS_PROFILE_BASE64:-}" ]; then
-            echo "IOS_PROFILE_BASE64 is empty. Set it in GitHub Secrets."
-            exit 1
-          fi
-
-          PP_DIR="$HOME/Library/MobileDevice/Provisioning Profiles"
-          mkdir -p "$PP_DIR"
-
           PP_FILE="$RUNNER_TEMP/profile.mobileprovision"
           python3 -c "import base64,os; open('${PP_FILE}','wb').write(base64.b64decode(os.environ['IOS_PROFILE_BASE64'].strip()))"
-          python3 -c "import os; print('profile bytes:', os.path.getsize('${PP_FILE}'))"
-
-          # Convert .mobileprovision -> plist (will fail loudly if the decoded file isn't a real profile)
           /usr/bin/security cms -D -i "$PP_FILE" > "$PROFILE_PLIST"
-
           UUID=$(/usr/libexec/PlistBuddy -c 'Print:UUID' "$PROFILE_PLIST")
           NAME=$(/usr/libexec/PlistBuddy -c 'Print:Name' "$PROFILE_PLIST")
-
-          cp "$PP_FILE" "$PP_DIR/$UUID.mobileprovision"
-
-          echo "PROFILE_UUID=$UUID" >> "$GITHUB_ENV"
+          mkdir -p "$HOME/Library/MobileDevice/Provisioning Profiles"
+          cp "$PP_FILE" "$HOME/Library/MobileDevice/Provisioning Profiles/$UUID.mobileprovision"
           echo "PROFILE_NAME=$NAME" >> "$GITHUB_ENV"
-          echo "Imported provisioning profile: $NAME ($UUID)"
 
       - name: 🔑 Decode App Store Connect API key (p8)
         shell: bash
         run: |
           set -euo pipefail
-
-          if [ -z "${APP_STORE_CONNECT_API_KEY_BASE64:-}" ]; then
-            echo "APP_STORE_CONNECT_API_KEY_BASE64 is empty. Set it in GitHub Secrets."
-            exit 1
-          fi
-          if [ -z "${APP_STORE_CONNECT_API_KEY_ID:-}" ] || [ -z "${APP_STORE_CONNECT_API_KEY_ISSUER_ID:-}" ]; then
-            echo "APP_STORE_CONNECT_API_KEY_ID / APP_STORE_CONNECT_API_KEY_ISSUER_ID missing."
-            exit 1
-          fi
-
           mkdir -p "$ASC_DIR"
           ASC_P8_PATH="$ASC_DIR/AuthKey_${APP_STORE_CONNECT_API_KEY_ID}.p8"
-
           python3 -c "import base64,os; open('${ASC_P8_PATH}','wb').write(base64.b64decode(os.environ['APP_STORE_CONNECT_API_KEY_BASE64'].strip()))"
           chmod 600 "$ASC_P8_PATH"
-
           echo "ASC_API_KEY_PATH=$ASC_P8_PATH" >> "$GITHUB_ENV"
+
+      - name: 🏗️ Ensure xcpretty available
+        shell: bash
+        run: |
+          set -euo pipefail
+          echo "$(ruby -e 'print Gem.bindir')" >> "$GITHUB_PATH"
+          if ! command -v xcpretty >/dev/null 2>&1; then
+            gem install xcpretty -N
+          fi
 
       - name: 🏗️ Build archive (xcodebuild archive)
         shell: bash
         run: |
           set -euo pipefail
           rm -rf "$ARCHIVE_PATH"
-
-          xcodebuild \
-            -workspace "$XCODE_WORKSPACE" \
-            -scheme "$XCODE_SCHEME" \
-            -configuration "$CONFIGURATION" \
-            -sdk iphoneos \
-            -archivePath "$ARCHIVE_PATH" \
-            -destination "generic/platform=iOS" \
-            DEVELOPMENT_TEAM="$APPLE_TEAM_ID" \
-            archive | xcpretty
-
+          if command -v xcpretty >/dev/null 2>&1; then
+            xcodebuild \
+              -workspace "$XCODE_WORKSPACE" \
+              -scheme "$XCODE_SCHEME" \
+              -configuration "$CONFIGURATION" \
+              -sdk iphoneos \
+              -archivePath "$ARCHIVE_PATH" \
+              -destination "generic/platform=iOS" \
+              DEVELOPMENT_TEAM="$APPLE_TEAM_ID" \
+              archive | xcpretty
+          else
+            xcodebuild \
+              -workspace "$XCODE_WORKSPACE" \
+              -scheme "$XCODE_SCHEME" \
+              -configuration "$CONFIGURATION" \
+              -sdk iphoneos \
+              -archivePath "$ARCHIVE_PATH" \
+              -destination "generic/platform=iOS" \
+              DEVELOPMENT_TEAM="$APPLE_TEAM_ID" \
+              archive
+          fi
           test -d "$ARCHIVE_PATH"
 
       - name: 🧾 Create ExportOptions.plist (App Store)
@@ -300,11 +199,9 @@ jobs:
           set -euo pipefail
           python3 - <<'PY'
           import os, plistlib
-
           bundle_id = os.environ["APP_IDENTIFIER"]
           team_id = os.environ["APPLE_TEAM_ID"]
           profile_name = os.environ["PROFILE_NAME"]
-
           data = {
             "method": "app-store",
             "destination": "export",
@@ -312,83 +209,58 @@ jobs:
             "stripSwiftSymbols": True,
             "compileBitcode": False,
             "teamID": team_id,
-            "provisioningProfiles": {
-              bundle_id: profile_name
-            }
+            "provisioningProfiles": {bundle_id: profile_name}
           }
-
           with open(os.environ["EXPORT_OPTIONS_PLIST"], "wb") as f:
             plistlib.dump(data, f)
           PY
-
-          /usr/bin/plutil -lint "$EXPORT_OPTIONS_PLIST"
+          plutil -lint "$EXPORT_OPTIONS_PLIST"
 
       - name: 📤 Export IPA (xcodebuild -exportArchive)
         shell: bash
         run: |
           set -euo pipefail
-          rm -rf "$EXPORT_DIR"
-          mkdir -p "$EXPORT_DIR"
-
-          xcodebuild \
-            -exportArchive \
-            -archivePath "$ARCHIVE_PATH" \
-            -exportPath "$EXPORT_DIR" \
-            -exportOptionsPlist "$EXPORT_OPTIONS_PLIST" | xcpretty
-
+          rm -rf "$EXPORT_DIR"; mkdir -p "$EXPORT_DIR"
+          if command -v xcpretty >/dev/null 2>&1; then
+            xcodebuild \
+              -exportArchive \
+              -archivePath "$ARCHIVE_PATH" \
+              -exportPath "$EXPORT_DIR" \
+              -exportOptionsPlist "$EXPORT_OPTIONS_PLIST" | xcpretty
+          else
+            xcodebuild \
+              -exportArchive \
+              -archivePath "$ARCHIVE_PATH" \
+              -exportPath "$EXPORT_DIR" \
+              -exportOptionsPlist "$EXPORT_OPTIONS_PLIST"
+          fi
           ls -la "$EXPORT_DIR"
-          test -n "$(find "$EXPORT_DIR" -maxdepth 1 -name "*.ipa" -print -quit)"
+          test -n "$(find "$EXPORT_DIR" -maxdepth 1 -name '*.ipa' -print -quit)"
 
-      - name: 🚀 Upload to TestFlight (fastlane pilot)
+      - name: 🚀 Upload to TestFlight
         shell: bash
         env:
           RELEASE_NOTES: ${{ inputs.release_notes }}
         run: |
           set -euo pipefail
-
-          IPA_PATH=$(find "$EXPORT_DIR" -maxdepth 1 -name "*.ipa" | head -n 1)
-
+          IPA_PATH=$(find "$EXPORT_DIR" -maxdepth 1 -name '*.ipa' | head -n 1)
           python3 - <<'PY'
           import os, json
-          with open(os.environ["ASC_API_KEY_PATH"], "r", encoding="utf-8") as f:
-            key = f.read()
-
+          key_path = os.environ["ASC_API_KEY_PATH"]
+          key = open(key_path).read()
           payload = {
             "key_id": os.environ["APP_STORE_CONNECT_API_KEY_ID"],
             "issuer_id": os.environ["APP_STORE_CONNECT_API_KEY_ISSUER_ID"],
             "key": key,
             "in_house": False
           }
-
-          with open(os.environ["ASC_API_KEY_JSON"], "w", encoding="utf-8") as f:
-            json.dump(payload, f)
+          json.dump(payload, open(os.environ["ASC_API_KEY_JSON"], "w"))
           PY
-
-          if [ "${{ steps.ruby.outputs.use_bundler }}" = "true" ]; then
-            bundle exec fastlane pilot upload \
-              --api_key_path "$ASC_API_KEY_JSON" \
-              --ipa "$IPA_PATH" \
-              --skip_waiting_for_build_processing true \
-              --changelog "$RELEASE_NOTES"
-          else
-            fastlane pilot upload \
-              --api_key_path "$ASC_API_KEY_JSON" \
-              --ipa "$IPA_PATH" \
-              --skip_waiting_for_build_processing true \
-              --changelog "$RELEASE_NOTES"
-          fi
-
-      - name: 📎 Upload build artifacts
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: ios-build-artifacts
-          path: |
-            ${{ env.EXPORT_OPTIONS_PLIST }}
-            ${{ env.PROFILE_PLIST }}
-            ${{ env.ARCHIVE_INFO_PLIST }}
-            ${{ env.ARCHIVE_PATH }}
-            ${{ env.EXPORT_DIR }}
+          fastlane pilot upload \
+            --api_key_path "$ASC_API_KEY_JSON" \
+            --ipa "$IPA_PATH" \
+            --skip_waiting_for_build_processing true \
+            --changelog "$RELEASE_NOTES"
 
       - name: 🧹 Cleanup keychain
         if: always()
